[tool.poetry]
name = "coach_elo"
version = "0.1.0"
description = ""
authors = ["Noah <noakanois@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.4.0"
requests = "^2.28.1"
bs4 = "^0.0.1"
tqdm = "^4.64.0"
numpy = "^1.23.2"
seaborn = "^0.11.2"
matplotlib = "^3.5.3"
sklearn = "^0.0"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
